--- a/calc.css
+++ b/calc.css
@@ -1,5 +1,5 @@
 * {
-    background-color: #80b4e3;
+    background-color: #a6cdf0;
 }
 
 
@@ -9,7 +9,7 @@
     flex-direction: column;
     border: 1px solid black;
     width: 400px;
-    height: 615px;
+    height: 610px;
     border-radius: 8px;
     position: fixed;
     top: 50%;
@@ -28,7 +28,8 @@
 
 .button {
     box-sizing: border-box;
-    width: 85px;
+    width: 90px;
+    height: 95px;
     text-align: center;
     border: 1px solid black;
     border-radius: 8px;
@@ -38,11 +39,11 @@
     padding-right: 10px;
     font-family: sans-serif;
     font-size: 24px;
-    background-color: white;
+    background-color: #bf6de3;
 
 }
 #zero {
-    width: 180px;
+    width: 190px;
 }
 
 #display {
@@ -51,11 +52,11 @@
     width: 400px;
     text-align: right;
     border: 1px solid black;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 8px;
+    margin-right: 8px;
     margin-top: 6px;
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 56px;
-    background-color: white;
+    background-color: #b3acb7;
 }
